Delete sample post and fix layout issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -124,7 +124,8 @@
     overflow: hidden;
 }
 .blog-content-post-image-container img {
-    max-width: 100%;
+    width: 100%;
+    height: 200px;
     transition: transform 0.2s ease-out;
 }
 .blog-content-post-image-container:hover img {
@@ -161,8 +162,7 @@
 }
 .blog-content-post-description {
     word-wrap: break-word;
-    margin-top: 1rem;
-    margin-bottom: 1.8rem;
+    margin: 1rem 10% 1.8rem 10%;
 }
 .blog-content-post-link {
     font-weight: 700;
@@ -231,9 +231,11 @@
 
 .post-title {
     font-size: 32px;
-    line-height: 1;
+    line-height: 54px;
     text-align: center;
     margin-top: $spacing-unit;
+    margin-left: 15%;
+    margin-right: 15%;
 
     @media (min-width: 768px) {
         font-size: 42px;
